fix topbar z-index

--- a/source/sass/_menu.scss
+++ b/source/sass/_menu.scss
@@ -3,7 +3,7 @@
 */
 
 .navbar {
-	border-radius: none;
+	border-radius: 0;
 }
 .navbar-toggler {
 	display: block;
