--- a/source/sass/_topbar.scss
+++ b/source/sass/_topbar.scss
@@ -11,12 +11,12 @@ header {
 	height: auto;
 
 	.navbar {
-		border-radius: none;
+		border-radius: 0;
 		width: 100%;
 		height: 65px;
 		background: #000;
 		// position: relative;
-		z-index: 1;
+		z-index: 2;
 		margin-bottom: 0;
 		display: -webkit-flex;
 		display: flex;
